--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.41.2",
     "rollup-plugin-commonjs": "^10.1.0",
