master fix declaration issue

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build:full": "npm run clean && npm run build:ts && npm run build:rollup && npm run cp-types",
     "build:rollup": "rollup -c",
     "build:ts": "tsc -p .",
-    "cp-types": "cp -R lib/declaration build/",
+    "cp-types": "cp -R declaration build/",
     "cp-to-client": "cp -R lib client/",
     "dev": "nodemon --watch src -e ts, --exec npm run dev:start",
-    "clean": "rimraf lib/* && rimraf build/*",
+    "clean": "rimraf lib/* && rimraf build/* rimraf declaration/*",
     "dev:start": "npm run clean && npm run build:ts && npm run cp-to-client"
   },
   "files": [
