--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.22.0",
@@ -45,6 +46,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
     "rollup": "^2.41.2",
     "rollup-plugin-sourcemaps": "^0.6.3",
